<?xml version="1.0"?>
<package format="3">
  <name>rby1_hardware</name>
  <version>0.0.1</version>
  <description>rby1 hardware</description>
  <maintainer email="iaunoh@rainbow-robotics.com">Donghyeon Noh</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
